Solving collapsable nav issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -184,7 +184,7 @@ textarea {
 
 .collapsable__list {
     height: 100%;
-    margin-top: 15rem;
+    margin-top: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
